# eval-framework-learnings

./: .gitignore  README.md
agents/symantic-kernel-agent/: AI_Agent_SemanticKernel.csproj  AI_Agent_SemanticKernel.sln  AppConfig.cs  ChatCompletionAgent.cs  CommonUtils.cs  Logger.cs  Program.cs  README.md  SyntheticDataSet.json
agents/symantic-kernel-agent/Agents/: AzureAIMovieAgent.cs
agents/symantic-kernel-agent/Entity/: DataSetItem.cs
agents/symantic-kernel-agent/Plugins/: SearchMovieOnInternet.cs  SearchMovieOnOmDBIAPI.cs
eval/: .gitignore  README.md  eval_data.json  html_utils.py  html_utils_agent.py  main.py  pyproject.toml  requirements.txt
eval/.github/workflows/: python-app.yml
eval/scripts/: install_requirements.ps1  setup_venv.ps1
eval/src/evalproj/: __init__.py  __main__.py  agent_eval.py  cli.py  rag_eval.py  risk_safety_eval.py  risk_safety_rag_eval.py  text_similarity_eval.py
eval/tests/: test_cli.py
