[project]
name = "evalproj"
version = "0.1.0"
description = "Minimal Python project scaffold"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
dependencies = [
]



[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
